# FastAPI

./: .env.example  .gitignore  README.md  SPECIFICATIONS.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
banking_api/: __init__.py  exceptions.py  main.py
banking_api/models/: customer.py  fraud.py  responses.py  stats.py  transaction.py
banking_api/routers/: customers.py  fraud.py  stats.py  system.py  transactions.py
banking_api/services/: customer_service.py  fraud_detection_service.py  stats_service.py  system_service.py  transactions_service.py
tests/: conftest.py  test_customers.py  test_fraud.py  test_stats.py  test_system.py  test_transactions.py
tests/test_services/: __init__.py  test_data_layer.py  test_fraud_detection.py
